# BabylonNative

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  nightly.yml
Apps/: CMakeLists.txt  package-lock.json  package.json
Apps/Playground/: CMakeLists.txt
Apps/Playground/Android/BabylonNative/: CMakeLists.txt  build.gradle
Apps/Playground/Android/BabylonNative/src/main/cpp/: BabylonNativeJNI.cpp
Apps/Playground/Android/app/: build.gradle
Apps/Playground/Scripts/: config.json  gltf_serializer_texture_roundtrip_native.js  native_xr_babylon_portal_demo.js  native_xr_portal_fallback_command_stream_validation.js  native_xr_portal_fallback_no_command_stream_validation.js  native_xr_portal_fallback_validation.js  native_xr_portal_hillvalley_stress.js  native_xr_portal_manual_validation.js  native_xr_wgpu_capture.js  native_xr_wgpu_smoke.js  playground_runner.js  validation_native.js  validation_webgpu_native.js  webgpu_smoke.js
Apps/Playground/Scripts/native_xr_portal_assets/: native_xr_portal_AlderBark.ktx  native_xr_portal_AlderBranches.ktx  native_xr_portal_Colonne_simpleCompleteMap.ktx  native_xr_portal_D1_delorean_seatDiffuseMap2.ktx  native_xr_portal_D1_ext_cable_01_.ktx  native_xr_portal_D1_ext_cable_02_.ktx  native_xr_portal_D1_ext_cable_03_.ktx  native_xr_portal_D1_ext_cable_grid_.ktx  native_xr_portal_D1_ext_carrosserieDiffuseMap.ktx  native_xr_portal_D1_ext_metal_01_.ktx  native_xr_portal_D1_ext_neons_grid.ktx  native_xr_portal_D1_ext_reactor_01DiffuseMap2.ktx  native_xr_portal_D1_ext_wheelsAV_01DiffuseMap.ktx  native_xr_portal_D1_porte_01DiffuseMap.ktx  native_xr_portal_D1_porte_02DiffuseMap.ktx  native_xr_portal_Fils.ktx  native_xr_portal_LampasoloDiffuseMap.ktx  native_xr_portal_Parcmetre2CompleteMap.ktx  native_xr_portal_PoteauDiffuseMap.ktx  native_xr_portal_SycamoreLeaves5.ktx  native_xr_portal_allstateDiffuseMap.ktx  native_xr_portal_arbres_plan_04.ktx  native_xr_portal_arbuste.ktx  native_xr_portal_armstrongDiffuseMap.ktx  native_xr_portal_bancDiffuseMap.ktx  native_xr_portal_bank_of_nyDiffuseMap.ktx  native_xr_portal_bat_annexDiffuseMap.ktx  native_xr_portal_bat_arriereDiffuseMap.ktx  native_xr_portal_bat_arriere_02DiffuseMap.ktx  native_xr_portal_blue_birdDiffuseMap.ktx  native_xr_portal_bois_peint_vert.ktx  native_xr_portal_bouche_incendieDiffuseMap.ktx  native_xr_portal_boutderueDiffuseMap.ktx  native_xr_portal_brousaille_01.ktx  native_xr_portal_cabane_boisDiffuseMap.ktx  native_xr_portal_cattle_queenDiffuseMap.ktx  native_xr_portal_charDiffuseMap.ktx  native_xr_portal_coullons_bush.ktx  native_xr_portal_courthouseDiffuseMap.ktx  native_xr_portal_delorean_convecteurDiffuseMap2.ktx  (+65 more)
Apps/Playground/Shared/: AppContext.cpp  AppContext.h  CommandLine.cpp  CommandLine.h  Diagnostics.cpp  Diagnostics.h
Apps/Playground/iOS/: AppDelegate.swift  Info.plist  LibNativeBridge.h  LibNativeBridge.mm  ViewController.swift
Apps/Playground/macOS/: AppDelegate.m  Info.plist  ViewController.mm  main.mm
Apps/Playground/tvOS/: Info.plist
Apps/Playground/visionOS/: LibNativeBridge.mm
Apps/PrecompiledShaderTest/: README.md
Apps/UnitTests/: CMakeLists.txt
Apps/UnitTests/Source/: Tests.JavaScript.cpp
Apps/scripts/: applyBabylonJsPatchStack.js  generateNativeXrPortalEnvironment.js  transcodeHillValleyToGltf.js  tuneHillValleyGltfMaterials.js
Core/Graphics/Include/Shared/Babylon/Graphics/: Device.h
Core/GraphicsWgpu/: CMakeLists.txt
Core/GraphicsWgpu/InternalInclude/Babylon/Graphics/: WgpuInterop.h
Core/GraphicsWgpu/Rust/: Cargo.toml  build.rs
Core/GraphicsWgpu/Rust/src/: lib.rs
Core/GraphicsWgpu/Rust/src/upstream_wgpu_native/: compute.rs
Core/GraphicsWgpu/Source/: DeviceImpl.cpp  DeviceImpl.h  WgpuNative.cpp  WgpuNative.h
Dependencies/: CMakeLists.txt
Dependencies/xr/Include/: XR.h
Dependencies/xr/Source/ARKit/: XR.mm
Documentation/: WgpuMigrationPlan.md
Install/: Install.cmake
Patches/: apply_patch_if_needed.cmake
Patches/AndroidExtensions/: 0001-use-jni-string-region.patch
Patches/BabylonJS/: 0001-add-dom-free-font-offset-fallback.patch  0002-preserve-ktx-compressed-srgb-metadata.patch  0003-support-ssao2-world-space-normals.patch  0004-wrap-native-xr-webgpu-render-targets.patch  0005-batch-native-webgpu-render-pass-command-streams.patch  README.md  series
Plugins/: CMakeLists.txt
Plugins/NativeInput/: CMakeLists.txt
Plugins/NativeOptimizations/Source/: NativeOptimizations.cpp
Plugins/NativeWebGPU/Include/Babylon/Plugins/: NativeWebGPU.h
Plugins/NativeWebGPU/Source/: NativeWebGPU.cpp
Plugins/NativeWebGPU/Tests/: CMakeLists.txt
Plugins/NativeWebGPU/Tests/Source/: Tests.AsyncBridge.cpp
Plugins/NativeXr/: CMakeLists.txt
Plugins/NativeXr/Include/Babylon/Plugins/: NativeXr.h
Plugins/NativeXr/Source/: NativeXr.cpp  NativeXrImpl.cpp  NativeXrImpl.h  XRFrame.cpp  XRFrame.h  XRHitTestResult.h  XRHitTestSource.h  XRRay.h  XRRigidTransform.h  XRSession.cpp  XRViewerPose.h
Plugins/TestUtils/: CMakeLists.txt
Plugins/TestUtils/Source/: TestUtils.cpp  TestUtils.h  TestUtils_iOS.mm  TestUtils_tvOS.mm
Polyfills/Canvas/: CMakeLists.txt  shaderc.cmake
Polyfills/Canvas/Source/: Context.cpp  Context.h  Image.cpp
Polyfills/Canvas/Source/nanovg/: nanovg_babylon.cpp  nanovg_filterstack.cpp
Polyfills/CanvasWgpu/: CMakeLists.txt  Readme.md
Polyfills/CanvasWgpu/Rust/src/: lib.rs
Polyfills/CanvasWgpu/Source/: Canvas.cpp  Canvas.h  Colors.h  Context.cpp  Context.h  Gradient.cpp  Gradient.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  ImageDecoderAndroid.cpp  ImageDecoderApple.swift  MeasureText.cpp
Polyfills/CanvasWgpu/Source/nanovg/: nanovg.h
