[workspace]
members = [
    "Core/GraphicsWgpu/Rust",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "=1.25.0", features = ["derive"] }
femtovg = { version = "=0.25.0", default-features = false, features = ["wgpu", "textlayout"] }
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
imgref = "=1.12.1"
pollster = "=0.4.0"
raw-window-handle = "=0.6.2"
rgb = "=0.8.53"
serde_json = "=1.0.145"
wgpu = { version = "=29.0.3", default-features = false }
